# mono-repo-uv-project

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  MONOREPO_IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  main.py  mkdocs.yml  noxfile.py  pre-commit-config.yaml  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.githooks/lib/: shared.sh
.github/workflows/: ci.yml
apps/django-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/django-api/src/: celery_app.py
apps/django-api/src/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/django-api/src/apps/api/: urls.py
apps/django-api/src/apps/core/: exceptions.py  mixins.py  pagination.py  permissions.py  tasks.py  utils.py
apps/django-api/src/config/: settings.py  urls.py
apps/django-api/src/utils/: helpers.py
apps/django-api/tests/: conftest.py  test_health.py
apps/flask-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/flask-api/src/: app.py  celery_app.py  config.py  extensions.py
apps/flask-api/src/models/: token_blacklist.py  user.py
apps/flask-api/src/routes/: auth.py  health.py  users.py
apps/flask-api/src/schemas/: user.py
apps/flask-api/src/services/: user_service.py
apps/flask-api/src/utils/: helpers.py
apps/flask-api/tests/: conftest.py  test_auth.py  test_health.py
apps/frontend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/frontend/.streamlit/: config.toml
apps/frontend/src/: app.py  config.py
apps/frontend/src/api/: client.py
apps/frontend/src/auth/: login.py
apps/frontend/src/components/: cards.py  sidebar.py
apps/frontend/src/pages/: dashboard.py  home.py  login.py  profile.py
apps/frontend/src/utils/: helpers.py
apps/frontend/tests/: test_config.py
apps/micro-services/api_gateway/: app.py  auth.py  main.py  plans.py  pyproject.toml
apps/micro-services/archival/: main.py
apps/micro-services/cart/: config.py  main.py  pyproject.toml  seed.py
apps/micro-services/cart/forms/: __init__.py  checkout.py
apps/micro-services/cart/models/: __init__.py  order.py  product.py  user.py
apps/micro-services/cart/routes/: auth.py  products.py
apps/micro-services/cart/static/css/: ecommerce.css
apps/micro-services/cart/static/js/: main.js
apps/micro-services/cart/templates/auth/: login.html
apps/micro-services/cart/templates/base/: index.html  (+1 more)
apps/micro-services/config_server/: main.py
apps/micro-services/inventory/: main.py
apps/micro-services/inventory/core/: config.py  events.py
apps/micro-services/item/: main.py  pyproject.toml
apps/micro-services/item/app/api/v1/: api.py
apps/micro-services/item/app/api/v1/endpoints/: auth.py  cart.py  orders.py  products.py  users.py
apps/micro-services/item/app/core/config/: settings.py
apps/micro-services/item/app/core/security/: auth.py
apps/micro-services/item/app/db/: database.py  redis_cache.py
apps/micro-services/item/app/middleware/: rate_limit.py
apps/micro-services/item/app/models/: order.py  product.py  review.py  user.py
apps/micro-services/item/app/schemas/: order.py  product.py  user.py
apps/micro-services/item/app/tasks/: celery_app.py  email_tasks.py
apps/micro-services/item/tests/: conftest.py  test_auth.py
apps/micro-services/item_management/: main.py
apps/micro-services/notification/: main.py
apps/micro-services/offers/: .gitignore  pyproject.toml
apps/micro-services/offers/src/: urls.py  views.py  wsgi.py
apps/micro-services/order/: main.py
apps/micro-services/payment/: main.py
apps/micro-services/product/: main.py
apps/micro-services/recommendations/: main.py
apps/micro-services/review_and_ratings/: main.py
apps/micro-services/service_discovery/: main.py
apps/micro-services/serviceability/: main.py
apps/micro-services/user/src/: main.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
apps/web/src/: App.test.tsx  App.tsx  index.css
config/: dependencies.toml
docs/: index.md
docs/licenses/: license_files.txt
educational-resources/python-programming/: pyproject.toml
libs/shared/: pyproject.toml
libs/shared/src/shared/: __init__.py  contracts.py  number_utils.py
scripts/: install-hooks.sh
services/api_gateway/: main.py
services/archival/: main.py
services/cart/: .env  config.py  extensions.py  main.py  pyproject.toml  seed.py  utils.py
services/cart/forms/: __init__.py  auth.py  checkout.py
services/cart/models/: cart.py  order.py  product.py  user.py
services/cart/routes/: cart.py  main.py  orders.py  products.py
services/cart/templates/auth/: register.html
services/cart/templates/base/: about.html
services/cart/templates/products/: listing.html
services/inventory/api/dependencies/: articles.py
services/inventory/api/routes/: authentication.py  comments.py  profiles.py  users.py
services/inventory/core/settings/: app.py
services/item/: .env.example  main.py
services/item/app/db/: database.py  redis_cache.py
services/item/app/middleware/: logging.py  rate_limit.py
services/item/app/models/: order.py  product.py  review.py  user.py
services/item/app/schemas/: order.py  product.py  user.py
services/item/app/tasks/: celery_app.py  email_tasks.py
services/item/tests/: test_auth.py
services/item_management/: main.py
services/offers/src/: asgi.py  settings.py  urls.py  views.py  wsgi.py
services/order/: main.py
services/product/: main.py
services/review_and_ratings/: main.py
services/serviceability/: main.py
services/user/: .env
services/user/src/config/: settings.py
tests/: conftest.py  test_cli.py  test_main.py  test_migration_manager.py
tools/cli/: pyproject.toml
tools/cli/src/cli/: boilerplate_generator.py  flask_boilerplate.py  migrations.py
(+28 files in other folders)
