[project]
name = "python-mono-repo-starter-kit"
version = "0.1.0"
description = "A uv-based monorepo starter with Django API, Flask API, Streamlit frontend, and Python packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "typer-slim[standard]",
    "python-dotenv>=1.2.1",
    "click>=8.3.1",
    "sqlalchemy>=2.0.46",
    "setuptools>=80.10.2",
    "core",
    "shared",
    "packages",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.8.2",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.11",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
# Django API
django-migrate = "cd apps/django-api && python manage.py migrate"
django-runserver = "cd apps/django-api && python manage.py runserver"
django-test = "cd apps/django-api && pytest"

# Flask API
flask-run = "cd apps/flask-api && flask run"
flask-test = "cd apps/flask-api && pytest"

# Frontend
frontend-run = "cd apps/frontend && streamlit run src/app.py"
frontend-test = "cd apps/frontend && pytest"

# Boilerplate Generator
boilerplate-list = "python -m tools.cli.src.cli.boilerplate_generator list-templates"

[project.scripts]
cli = "cli:app"
migrations = "migrations:main"
boilerplate = "boilerplate_generator:app"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "apps/django-api",
    "apps/flask-api",
    "apps/frontend",
    "libs/shared",
    "packages/core",
    "tools/cli",
    "packages/maths",
    "packages/machine-learning",
    "packages/algorithms",
    "packages/concepts",
    "packages/programming",
    "packages/competitive-programming",
    "packages/data_structure",
]

[dependency-groups]
nox = ["nox-uv"]
test = ["pytest", "pytest-cov", "pytest-randomly"]
type_check = ["mypy"]
lint = ["ruff"]
docs = [
    "mkdocs-material",
    "mkdocs-htmlproofer-plugin",
    "mkdocstrings[python]",
    "mkdocs-api-autonav",
]
licenses = ["pip-licenses-cli"]
debugging_tool = ["pysnooper"]
dev = [
    "poethepoet>=0.40.0",
    "pre-commit>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["services", "packages", "libs", "tools", "apps"]

[tool.uv.sources]
core = { workspace = true }
shared = { workspace = true, editable = true }
tools = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/django-api",
    "apps/flask-api",
    "apps/frontend",
    "libs/shared",
    "packages/core",
    "tools/cli",
    "packages/data_structure",
    "packages/algorithms",
    "packages/concepts",
    "packages/programming",
    "packages/competitive-programming",
    "packages/maths",
    "packages/machine-learning",
    "services/*",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
enable_error_code = ["deprecated", "exhaustive-match", "explicit-override"]

[tool.ruff]
line-length = 88
target-version = "py310"
indent-width = 4
src = ["apps", "services", "packages", "libs", "tools"]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]

[tool.ruff.lint]
select = [
    "F", "E", "I", "N", "UP", "RUF", "B", "C4", "ISC", "PIE",
    "PT", "PTH", "SIM", "TID",
]
ignore = []
fixable = ["ALL"]
extend-ignore = ["RUF005", "RUF012"]
unfixable = ["F401"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
