[project]
name = "django_api"
version = "0.1.0"
description = "Django REST API - django-api"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=24.1",
    "django-environ>=0.11.0",
    "django-extensions>=3.2.0",
    "django-health-check>=3.17.0",
    "django-redis>=5.4.0",
    "django-silk>=5.1.0",
    "django-storages>=1.14.0",
    "django-allauth>=0.60.0",
    "djangorestframework-simplejwt>=5.3.0",
    "drf-spectacular>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "sentry-sdk>=2.0.0",
    "whitenoise>=6.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=5.0",
    "model-bakery>=1.18.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "django-debug-toolbar>=5.0.0",
    "ipython>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.16.0",
]
