[project]
name = "flask_api"
version = "0.1.0"
description = "Flask REST API - flask-api"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.6.0",
    "flask-marshmallow>=0.15.0",
    "marshmallow-sqlalchemy>=0.30.0",
    "marshmallow>=3.21.0",
    "flask-limiter>=3.6.0",
    "flask-mail>=0.9.1",
    "flask-redis>=0.4.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "webargs>=8.4.0",
    "apispec>=6.6.0",
    "apispec-webframeworks>=1.0.0",
    "marshmallow-dataclass>=8.6.0",
    "sentry-sdk>=2.0.0",
    "werkzeug>=3.0.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "ruff>=0.11.0",
    "mypy>=1.16.0",
]
