[project]
name = "frontend"
version = "0.1.0"
description = "Streamlit frontend - frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "st-pages>=0.4.0",
    "streamlit-option-menu>=0.3.0",
    "streamlit-authenticator>=0.3.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11.0",
    "mypy>=1.16.0",
]
