[project]
name = "cli"
version = "0.1.0"
description = "CLI tools for the Python monorepo (boilerplate generation, migrations, utilities)"
readme = "README.md"
authors = [
    { name = "Avinash Nishad", email = "js.avinash.nishad@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich",
    "typer-slim[standard]",
]

[project.scripts]
cli = "cli:app"
migrations = "cli.migrations:main"
boilerplate_generator = "cli.boilerplate_generator:app"