[project]
name = "item"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    # Redis & Caching
    "redis>=5.0.1",
    "redis-om>=0.2.1",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Email
    "fastapi-mail>=1.4.1",
    "jinja2>=3.1.3",
    # Payment Processing
    "stripe>=7.11.0",
    # Task Queue
    "celery>=5.3.6",
    "flower>=2.0.1",
    # API Documentation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    # Image Processing
    "pillow>=10.2.0",
    # AWS S3 (for file storage)
    "boto3>=1.34.34",
    # WebSockets (for real-time features)
    "websockets>=12.0",
    # Rate Limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]
