[project]
name = "offers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "django>=5.0",
    "django-environ>=0.11.0",
    "Pillow>=10.0.0",
    "stripe>=7.0.0",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "Faker>=22.0",
    "django-debug-toolbar>=5.0",
]